feat: agregar refresh token, mejorar validaciones y corregir issues de SonarQube
- Agregar restricciones en base de datos y validaciones en DTOs para datos de entrada
- Implementar mecanismo de refresh token para autenticación
- Externalizar configuración e introducir variables locales para mayor claridad
- Corregir issues de SonarQube: convenciones de nomenclatura, uso de toList(), constructores privados, mejoras en expresiones regulares